--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "express": "4.17.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.17.1",
     "joi": "^17.13.3",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "morgan": "1.10.0",
     "template": "file:",
     "uuid": "^10.0.0"
